# fiestaaa_back

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  alert_rules.yml  alertmanager.yml  build.rs  cliff.toml  docker-compose.monitoring.yml  docker-compose.prod.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.prod.yml  prometheus.yml
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  chore.md  chore.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: backup-restore-drill.yml  bootstrap-vps.yml  ci.yml  dependency-review.yml  deploy.yml  markdown-links.yml  provision-vps.yml  uptime-monitor.yml
docs/: architecture.md  deploiement.md  first-contribution.md  incident-securite.md  passage-public-open-source.md
docs/issue-drafts/: feature-covoiturage.md  feature-items-grille-categories.md  feature-items-resume-utilisateur.md  feature-items-separation-apporte-besoin.md  feature-playlist-partagee.md
grafana/dashboards/: fiestaaa-dashboard.json
grafana/provisioning/dashboards/: fiestaaa.yml
infra/vps/: README.md  cloud-init.yml
infra/vps/ansible/: inventory.example.yml  playbook.yml
infra/vps/ansible/group_vars/: all.yml
infra/vps/ansible/templates/: fail2ban-sshd.local.j2  sshd-fiestaaa.conf.j2
migrations/: 0001_init.sql  0002_add_event_tables.sql  0003_seed_items.sql  0004_add_event_owner.sql  0005_add_payment_requested_amount.sql  0006_add_item_unit_label.sql  0007_add_event_item_creator.sql  0008_add_payment_link_validation.sql  0009_update_lydia_link.sql  0010_update_payment_regex.sql  0011_add_event_coordinates.sql  0012_add_share_tokens.sql  0013_add_payment_per_person.sql  0014_add_user_handle.sql  001_initial_schema.sql  002_qr_code_checkin.sql  002_user_metrics_indexes.sql  003_invitation_lookup_indexes.sql  004_carpool_consistency.sql  004_user_devices.sql  005_event_polls.sql  005_notification_outbox.sql  006_event_lifecycle.sql  006_invitation_status_expired.sql  007_carpooling.sql  007_pagination_indexes.sql  008_item_kind.sql  010_event_playlist.sql  011_event_enabled_features.sql  011_item_category.sql  012_event_duration_and_expenses.sql  013_event_expenses_creator.sql  014_oauth_identities.sql  015_pending_registrations.sql  016_event_share_token_hardening.sql  017_event_invitation_deadline.sql  018_revoked_auth_tokens.sql  019_event_ticketing_feature.sql
observability/grafana/dashboards/: fiestaaa-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/loki/: loki.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail.yml
scripts/: backup_runtime.sh  check_markdown_links.rb  db_stats.sh  install-hooks.sh  rebuild_db_from_schema.sh  restore_drill_postgres.sh  update-release-changelog.rb
src/: api_error.rs  auth.rs  cleanup.rs  config.rs  db.rs  docs.rs  handles.rs  lib.rs  main.rs  metrics.rs  models.rs  notifications.rs  observability.rs  pagination.rs  rate_limit.rs  realtime.rs  security.rs  state.rs  user_metrics.rs
src/realtime/: actor_ws.rs
src/repositories/: event_repository.rs  mod.rs
src/routes/: auth.rs  carpools.rs  event_access.rs  events.rs  friends.rs  health.rs  invitations.rs  items.rs  mod.rs  notifications.rs  payment_providers.rs  qr_codes.rs  realtime.rs  root.rs  users.rs
src/routes/events/: address.rs  core.rs  expenses.rs  items.rs  mod.rs  polls.rs  share_links.rs
swagger-ui/: index.css
tests/: auth.rs  carpools.rs  event_expenses.rs  events.rs  friends.rs  invitations.rs  items.rs  notifications.rs  payment_providers.rs  qr_codes.rs  realtime.rs  root_health_users.rs
tests/common/: mod.rs
