[package]
name = "fiestaaa_back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "migrate", "time", "chrono", "uuid"] }
argon2 = "0.5"
dotenvy = "0.15"
rand_core = "0.6"
actix-cors = "0.7"
futures-util = "0.3"
redis = { version = "1", features = ["aio", "tokio-comp"] }
serde_urlencoded = "0.7"
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web", "vendored"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
gcp_auth = "0.12.4"

[dev-dependencies]
once_cell = "1"
