[package]
name = "fiestaaa_back"
version = "0.1.3"
edition = "2024"
rust-version = "1.96"
description = "Backend API for Fiestaaa"
license = "AGPL-3.0-only"
repository = "https://github.com/theopeuchlestrade/fiestaaa_back"
readme = "README.md"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.8"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "derive", "time", "chrono", "uuid"] }
argon2 = "0.5"
dotenvy = "0.15"
rand = "0.10"
actix-cors = "0.7"
futures-util = "0.3"
redis = { version = "1", features = ["aio", "tokio-comp"] }
serde_urlencoded = "0.7"
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web", "vendored"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.13.2", default-features = true, features = ["json", "query"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
gcp_auth = "0.12.6"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
sha2 = "0.11"
prometheus = "0.14.0"
once_cell = "1"
sentry = "0.48.2"

[dev-dependencies]
base64 = "0.22"
once_cell = "1"
rsa = "0.9"
